# ADuC832_demoproject

./: .gitignore  ADUC832.h  CMakeLists.txt  Makefile  README.md  adc.c  adc.h  assert.h  button.c  button.h  clock.c  clock.h  console.c  console.h  dac.c  dac.h  interrupts.h  intlog2.h  lcd.c  lcd.h  led.c  led.h  main.c  printf.c  printf.h  pwm.c  pwm.h  rtc.c  rtc.h  run_cmake.sh  sdcc_toolchain.cmake  serial.c  serial.h  timer.c  timer.h  util.h  watchdog.c  watchdog.h
Modules/Compiler/: SDCC-ASM.cmake
Modules/Platform/: sdcc-SDCC-C.cmake  sdcc.cmake
Platform/: mcs51-SDCC-C.cmake  mcs51.cmake
loader/: diffhex.py  dumphex.py  loader.py
scripts/: cmake_fedora.sh  intlog2.py  license_all.sh  licenseheader  prepender.py
tools/: cmake_fedora.sh  license_all.sh  licenseheader  prepender.py
